--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,28 +1,11 @@
 
-/* check comments*/
-body{
-    margin: 0;
-}
-html{
-    font-size: 10px;
-    background-color: pink;
-    background-image: url(../images/peaceful-water-landscape-photo-l.jpg);
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 100%;
-}
+@import "node_modules/bootstrap/scss/bootstrap";
 
-h1{
-    color: red;
-}
-h2{
-    color: white;
-    font-size: 120px;
-}
-.container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 
+@import "./abstracts/_functions.scss";
+@import "./abstracts/_variables.scss";
+@import "./abstracts/_mixins.scss";
+@import "./base/_reset.scss";
+@import "./layout/_header.scss";
+@import "./layout/_introduction.scss";
 
