feat: add introduction section

--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -2,5 +2,13 @@
 :root{
   --bs-body-font-family: 'Source Sans Pro', sans-serif;
 }
+$container-max-widths: (
+  sm: 540px,
+  md: 720px,
+  lg: 960px,
+  xl: 1170px,
+  xxl: 1320px
+);
+
 
 $header-title-font: 'Quicksand', sans-serif; 
