--- a/src/assets/scss/abstracts/_mixins.scss
+++ b/src/assets/scss/abstracts/_mixins.scss
@@ -1,2 +1,54 @@
 @import "../../../../node_modules/bootstrap/scss/_mixins";
+    // line-height: 48px;
+@mixin title{
+font-size: 36px;
 
+color:  #ffffff;
+letter-spacing: 1px;
+
+} 
+@mixin sub-title{
+    font-size: 9px;
+    letter-spacing: 1px;
+
+    text-transform: uppercase;
+    color: #008ed6;
+    font-weight: 700;
+    font-family: "Source Sans Pro";
+}
+@mixin section-text{
+    font-size: 12px ;
+    opacity: 0.7;
+    font-weight: 300;
+    font-family: Source Sans Pro;
+    color: #A9A9A9;
+    letter-spacing: 1px;
+}
+
+@mixin button-primary{
+    font-size: 12px;
+    line-height: 48px;
+    text-transform: uppercase;
+    color: #ffffff;
+    font-weight: 700;
+    font-family: "Source Sans Pro";
+    text-align: center;
+    width: 160px;
+    height: 50px;
+    filter: drop-shadow(0 0 1.5px rgba(3,3,3,0.1));
+    background-color: #008ed6;
+    border: none;
+}
+@mixin button-secondary{
+    font-size: 12px;
+    line-height: 48px;
+    text-transform: uppercase;
+    color: #ffffff;
+    font-weight: 700;
+    font-family: "Source Sans Pro";
+    text-align: center;
+    width: 160px;
+    height: 50px;
+    background-color: rgba(0,142,214,0);
+    border: 1px solid rgba(255,255,255,0.2);
+}
