--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -6,19 +6,46 @@
 
 
 .header{
-  background-image: url("../images/header-bg.png"); 
-  width: 100%; 
-  height: 47vh;
-  background-size: cover;
-  position: relative;
+
   &__title{
   font-size: 24px;
+  max-width: 443px;
   }
   &__subtitle-container{
     display: flex;
     flex-direction: row;
     font-size: 9px;
   }
+  &__bg{
+    background-image: url("../images/header-bg.png"); 
+    width: 100%; 
+
+    background-size: cover;
+    position: relative;
+  }
 
 }
+
+
+.introduction{
+  &__content{
+
+  }
+  &__title{
+    @include m.title;
+  }
+  &__sub-title{
+    @include m.sub-title; 
+  }
+  &__text{
+    @include m.section-text;
+    max-width: 400px;
+  }
+  &__btn-container{
+    display: flex;
+    gap: 10px;
+  }
+}
+
+
 
