--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -5,7 +5,7 @@
 @import "./abstracts/_functions.scss";
 @import "./abstracts/_variables.scss";
 @import "./abstracts/_mixins.scss";
+@import "./components/_buttons.scss";
 @import "./base/_reset.scss";
 @import "./layout/_header.scss";
-@import "./layout/_introduction.scss";
 
