--- a/src/tpl/layouts/default.html
+++ b/src/tpl/layouts/default.html
@@ -22,9 +22,8 @@
 </head>
 
 <body>
-    {{> header}}
+    {{>  header--top }}
 
-    {{> introduction}}
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
