--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -8,4 +8,5 @@
 @import "./components/_buttons.scss";
 @import "./base/_reset.scss";
 @import "./layout/_header.scss";
+@import "./layout/_features.scss";
 
