--- a/src/tpl/layouts/default.html
+++ b/src/tpl/layouts/default.html
@@ -24,6 +24,8 @@
 <body>
     {{>  header--top }}
 
+    {{>  features }}
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
