feat: add devices section

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -9,4 +9,5 @@
 @import "./base/_reset.scss";
 @import "./layout/_header.scss";
 @import "./layout/_features.scss";
+@import "./layout/_devices.scss";
 
