--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -10,4 +10,4 @@
 @import "./layout/_header.scss";
 @import "./layout/_features.scss";
 @import "./layout/_devices.scss";
-
+@import "./layout/_device.scss";
