--- a/src/tpl/layouts/default.html
+++ b/src/tpl/layouts/default.html
@@ -28,6 +28,8 @@
 
 
     {{>  devices }}
+
+    {{>  device }}
     
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
