--- a/src/tpl/partials/features.html
+++ b/src/tpl/partials/features.html
@@ -5,43 +5,45 @@
                 <h3 class="features__sub-title">product overwiew </h3>
                 <h2 class="features__title"> List of amazing features</h2>
             </div>
-           
-            
+
+
             <div class="features__list-container row">
                 <div class="features__list-item__wrapper col-3">
                     <div class="features__icon-wrapper">
-                        <img src="../../assets/images/icon-monitor.png" alt="" class="features__icon">
+
+                        <span class="features__icon"></span>
                     </div>
                     <h4 class="features__item-title">Customizable</h4>
-                    <p class="features__item-text"> 
-                      Fusce fermentum placerat magna ac pharetra. Aliquam euismod elit non ipsum lacinia consectetur.
+                    <p class="features__item-text">
+                        Fusce fermentum placerat magna ac pharetra. Aliquam euismod elit non ipsum lacinia consectetur.
                     </p>
                 </div>
                 <div class="features__list-item__wrapper col-3">
                     <div class="features__icon-wrapper">
-                        <img src="../../assets/images/icon-monitor.png" alt="" class="features__icon">
+                        <span class="features__icon"></span>
+
                     </div>
                     <h4 class="features__item-title">Lovely design</h4>
-                    <p class="features__item-text"> 
-                      Fusce fermentum placerat magna ac pharetra. Aliquam euismod elit non ipsum lacinia consectetur.
+                    <p class="features__item-text">
+                        Fusce fermentum placerat magna ac pharetra. Aliquam euismod elit non ipsum lacinia consectetur.
                     </p>
                 </div>
                 <div class="features__list-item__wrapper col-3">
                     <div class="features__icon-wrapper">
-                        <img src="../../assets/images/icon-monitor.png" alt="" class="features__icon">
+                        <span class="features__icon"></span>
                     </div>
                     <h4 class="features__item-title">MObile Friendly</h4>
-                    <p class="features__item-text"> 
-                      Fusce fermentum placerat magna ac pharetra. Aliquam euismod elit non ipsum lacinia consectetur.
+                    <p class="features__item-text">
+                        Fusce fermentum placerat magna ac pharetra. Aliquam euismod elit non ipsum lacinia consectetur.
                     </p>
                 </div>
                 <div class="features__list-item__wrapper col-3">
                     <div class="features__icon-wrapper">
-                        <img src="../../assets/images/icon-monitor.png" alt="" class="features__icon">
+                        <span class="features__icon"></span>
                     </div>
                     <h4 class="features__item-title">Responsive</h4>
-                    <p class="features__item-text"> 
-                      Fusce fermentum placerat magna ac pharetra. Aliquam euismod elit non ipsum lacinia consectetur.
+                    <p class="features__item-text">
+                        Fusce fermentum placerat magna ac pharetra. Aliquam euismod elit non ipsum lacinia consectetur.
                     </p>
                 </div>
             </div>
