--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,7 +1,7 @@
 
 @import "node_modules/bootstrap/scss/bootstrap";
 
-
+@import "./base/_typography.scss";
 @import "./abstracts/_functions.scss";
 @import "./abstracts/_variables.scss";
 @import "./abstracts/_mixins.scss";
