--- a/src/assets/scss/layout/_features.scss
+++ b/src/assets/scss/layout/_features.scss
@@ -2,7 +2,7 @@
 @use "../abstracts/_functions.scss" as f;
 @use "../abstracts/_variables.scss" as v;
 @use "../abstracts/_mixins.scss" as m;
-
+@import "../base/_typography.scss";
 .features{
     padding-top: 40px;
     &__container{
