--- a/src/tpl/partials/devices.html
+++ b/src/tpl/partials/devices.html
@@ -8,37 +8,38 @@
             <h2 class="devices__title">Beautiful on every device</h2>
             <p class="devices__text">
                 Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.
-                 Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. 
+                Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae
+                erat consequat auctor eu in elit.
             </p>
             <div class="devices__items-wrapper ">
                 <div class="devices__item">
                     <div class="devices__icon-wrapper">
-                        <img src=""  alt="" class="devices__icon">
+                        <span class="devices__icon"></span>
                     </div>
                     <p class="devices__item-text">Awesome design</p>
                 </div>
                 <div class="devices__item">
                     <div class="devices__icon-wrapper">
-                        <img src=""  alt="" class="devices__icon">
+                        <span class="devices__icon"></span>
                     </div>
                     <p class="devices__item-text">Fully responsive</p>
                 </div>
                 <div class="devices__item">
                     <div class="devices__icon-wrapper">
-                        <img src=""  alt="" class="devices__icon">
+                        <span class="devices__icon"></span>
                     </div>
                     <p class="devices__item-text">Retina ready</p>
                 </div>
                 <div class="devices__item">
                     <div class="devices__icon-wrapper">
-                        <img src=""  alt="" class="devices__icon">
+                        <span class="devices__icon"></span>
                     </div>
                     <p class="devices__item-text">Tons of features and easy to use</p>
                 </div>
-              
+
             </div>
         </div>
 
-       
+
     </div>
 </section>
