--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -12,6 +12,13 @@ $container-max-widths: (
   xl: 1170px,
   xxl: 1320px
 );
-
-
+$main-font: 'Source Sans Pro';
+$header-title-color: #FFFFFF;
 $header-title-font: 'Quicksand', sans-serif; 
+$header-nav-color: #FFFEFE;
+$title-color: #1A1A1A;
+$sub-title-color: #008ED6;
+$section-text-color: #999999;
+$main-white-color:  #ffffff;
+$main-blue-color: #008ED6;
+$background-black-color: #15141A;
