--- a/src/tpl/partials/header--top.html
+++ b/src/tpl/partials/header--top.html
@@ -5,10 +5,10 @@
 
       <nav class="navbar ">
         <a href="" class="navbar-brand navbar__header d-flex align-items-center">
-          <h1 class="header__title text-light  ">LUCID</h1>
+          <h1 class="header__title   ">LUCID</h1>
           <div class="header__subtitle-container d-flex flex-column">
-            <span class="header__subtitle text-secondary">ONEPAGE</span>
-            <span class="header__subtitle text-secondary">THEME</span>
+            <span class="header__subtitle ">ONEPAGE</span>
+            <span class="header__subtitle ">THEME</span>
           </div>
         </a>
 
@@ -31,20 +31,20 @@
   <section class="introduction  ">
 
     <div class="container">
-      <div class="intorduction__container  row pt-5">
+      <div class="introduction__container  row ">
         <div class="introduction__content col ">
-          <h3 class="introduction__sub-title text-primary">introducing lucid theme</h3>
-          <h2 class="introduction__title text-white pt-4 ">Carefully crafted and beautiful landing page.</h2>
+          <h3 class="introduction__sub-title ">introducing lucid theme</h3>
+          <h2 class="introduction__title   ">Carefully crafted and beautiful landing page.</h2>
           <p class="introduction__text">Etiam ullamcorper et turpis eget hendrerit. Praesent varius risus mi, at
             elementum magna ultricies accumsan. Cras venenatis lacus sed dolor placerat tempus. Morbi blandit at neque
             ut imperdiet.</p>
-          <div class="introduction__btn-container pt-4">
+          <div class="introduction__btn-container ">
             <button class="button-primary button">DOWNLOAD NOW</button>
             <button class="button-secondary button">VIEW FEATURES</button>
           </div>
         </div>
-        <div class="introduction__image-container col">
-          <img src="../../assets/images/devices.png" class="introduction__image">
+        <div class="introduction__img-container col">
+          <img src="../../assets/images/introduction.png" class="introduction__img">
         </div>
       </div>
     </div>
