--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -8,8 +8,11 @@
 .header{
 
   &__title{
-  font-size: 24px;
-  max-width: 443px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    color: v.$header-title-color;
+    letter-spacing: 0.1em;
   }
   &__subtitle-container{
     display: flex;
@@ -29,24 +32,43 @@
 
 }
 
+.navbar
+{
+  padding-top: 30px;
+  &__link{
+    color: v.$header-nav-color;
+  }
+  
+}
 
 .introduction{
   &__content{
-
+    padding-top: 30px;
+  }
+  &__container{
+    gap: 243px;
+    padding-top: 51px;  
   }
   &__title{
-    @include m.white-title;
+    @include m.introduction-title;
+    padding-top: 17px;
+    margin-right: -28px;
   }
   &__sub-title{
     @include m.sub-title; 
+    font-size: 14.5px;
   }
   &__text{
     @include m.section-text;
-    max-width: 400px;
+    margin-right: -27px;
+    padding-top: 20px;
+    max-width: 480px;
+  
   }
   &__btn-container{
     display: flex;
-    gap: 10px;
+    gap: 20px;
+    padding-top: 43px;
   }
 }
 
