--- a/src/tpl/partials/device.html
+++ b/src/tpl/partials/device.html
@@ -10,7 +10,7 @@
             </p>
         </div>
         <div class="device__img-container col">
-            <img src="../../assets/images/devices.png" alt="" class="device__img">
+            <img src="../../assets/images/device.png" alt="" class="device__img">
         <div>
     </div>
 </section>
