fix: device section to add background color

--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -22,3 +22,4 @@ $section-text-color: #999999;
 $main-white-color:  #ffffff;
 $main-blue-color: #008ED6;
 $background-black-color: #15141A;
+$background-gray-color: #F2F2F2;
