--- a/src/assets/scss/layout/_device.scss
+++ b/src/assets/scss/layout/_device.scss
@@ -4,7 +4,7 @@
 @use "../abstracts/_mixins.scss" as m;
 @import "../base/_typography.scss";
 .device{
-
+    background-color: v.$background-gray-color;
     &__item-text{
         @include m.section-text;
     }
