feat: add prices section

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -11,6 +11,7 @@
 @import "./layout/_features.scss";
 @import "./layout/_devices.scss";
 @import "./layout/_device.scss";
+@import "./layout/_prices.scss";
 
 @media (min-width: 1400px){
   .container{
