--- a/src/assets/scss/abstracts/_mixins.scss
+++ b/src/assets/scss/abstracts/_mixins.scss
@@ -97,3 +97,25 @@ letter-spacing: 1px;
     height: 20px;
     padding: 45px;
 }
+
+
+@mixin slider-text{
+    font-family: v.$main-font;
+    font-style: italic;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 30px;
+    color: v.$main-white-color;
+
+}
+
+@mixin testimonal-text{
+    font-family: v.$main-font;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: v.$main-white-color;
+    
+    
+}
