--- a/src/tpl/partials/prices.html
+++ b/src/tpl/partials/prices.html
@@ -4,47 +4,17 @@
             <div class="prices__top-wrapper">
                 <h3 class="prices__sub-title">QUALITY HAS ITS PRICE </h3>
                 <h2 class="prices__title"> Pricings & Plans</h2>
-                <span  class="lines" ></span>
+                <span class="lines"></span>
             </div>
 
             <div class="prices-slider swiper-container">
                 <div class=" prices-slider__wrapper swiper-wrapper">
                     <div class=" prices-slider__slide swiper-slide">
-                            <div class="prices-content__wrapper">
-                                <div class="prices__item-wpapper">
-                                    <p class="prices__text">
-                                        Once upon a time all the Rivers combined to protest against the action of the Sea in
-                                         making their waters salt. “When we come to you,” said they to the Sea.
-                                    </p>
-                                    <div class="prices-testimonal__wpapper">
-                                        <span class="prices-testimonal__icon"></span>
-                                        <div class="prices-testimonal-text__wrapper">
-                                            <span class="prices__testimonal-text">John Doe</span>
-                                            <span class="prices__testimonal-text">CEO, THE RIVERS COMPANY</span>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="prices__item-wpapper">
-                                    <p class="prices__text">Once upon a time all the Rivers combined to protest against the action of 
-                                        the Sea in making their waters salt. “When we come to you,” said they to the Sea.
-                                    </p>
-                                    <div class="prices-testimonal__wpapper">
-                                        <span class="prices-testimonal__icon"></span>
-                                        <div class="prices-testimonal-text__wrapper">
-                                            <span class="prices__testimonal-text">Dean Winchester</span>
-                                            <span class="prices__testimonal-text">UX DESIGNER, GOOGLE INC.</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                     </div>
-
-                     <div class=" prices-slider__slide swiper-slide">
                         <div class="prices-content__wrapper">
                             <div class="prices__item-wpapper">
                                 <p class="prices__text">
                                     Once upon a time all the Rivers combined to protest against the action of the Sea in
-                                     making their waters salt. “When we come to you,” said they to the Sea.
+                                    making their waters salt. “When we come to you,” said they to the Sea.
                                 </p>
                                 <div class="prices-testimonal__wpapper">
                                     <span class="prices-testimonal__icon"></span>
@@ -55,8 +25,9 @@
                                 </div>
                             </div>
                             <div class="prices__item-wpapper">
-                                <p class="prices__text">Once upon a time all the Rivers combined to protest against the action of 
-                                    the Sea in making their waters salt. “When we come to you,” said they to the Sea.
+                                <p class="prices__text">A shoe is not only a design, but it's a part of your body
+                                    language,
+                                    the way you walk. The way you're going to move is quite dictated by your shoes.
                                 </p>
                                 <div class="prices-testimonal__wpapper">
                                     <span class="prices-testimonal__icon"></span>
@@ -67,70 +38,103 @@
                                 </div>
                             </div>
                         </div>
-                 </div>
+                    </div>
 
-                 <div class=" prices-slider__slide swiper-slide">
-                    <div class="prices-content__wrapper">
-                        <div class="prices__item-wpapper">
-                            <p class="prices__text">
-                                Once upon a time all the Rivers combined to protest against the action of the Sea in
-                                 making their waters salt. “When we come to you,” said they to the Sea.
-                            </p>
-                            <div class="prices-testimonal__wpapper">
-                                <span class="prices-testimonal__icon"></span>
-                                <div class="prices-testimonal-text__wrapper">
-                                    <span class="prices__testimonal-text">John Doe</span>
-                                    <span class="prices__testimonal-text">CEO, THE RIVERS COMPANY</span>
+                    <div class=" prices-slider__slide swiper-slide">
+                        <div class="prices-content__wrapper">
+                            <div class="prices__item-wpapper">
+                                <p class="prices__text">
+                                    Once upon a time all the Rivers combined to protest against the action of the Sea in
+                                    making their waters salt. “When we come to you,” said they to the Sea.
+                                </p>
+                                <div class="prices-testimonal__wpapper">
+                                    <span class="prices-testimonal__icon"></span>
+                                    <div class="prices-testimonal-text__wrapper">
+                                        <span class="prices__testimonal-text">John Doe</span>
+                                        <span class="prices__testimonal-text">CEO, THE RIVERS COMPANY</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="prices__item-wpapper">
+                                <p class="prices__text">A shoe is not only a design, but it's a part of your body
+                                    language, the way you walk.
+                                    The way you're going to move is quite dictated by your shoes.
+                                </p>
+                                <div class="prices-testimonal__wpapper">
+                                    <span class="prices-testimonal__icon"></span>
+                                    <div class="prices-testimonal-text__wrapper">
+                                        <span class="prices__testimonal-text">Dean Winchester</span>
+                                        <span class="prices__testimonal-text">UX DESIGNER, GOOGLE INC.</span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="prices__item-wpapper">
-                            <p class="prices__text">Once upon a time all the Rivers combined to protest against the action of 
-                                the Sea in making their waters salt. “When we come to you,” said they to the Sea.
-                            </p>
-                            <div class="prices-testimonal__wpapper">
-                                <span class="prices-testimonal__icon"></span>
-                                <div class="prices-testimonal-text__wrapper">
-                                    <span class="prices__testimonal-text">Dean Winchester</span>
-                                    <span class="prices__testimonal-text">UX DESIGNER, GOOGLE INC.</span>
+                    </div>
+
+                    <div class=" prices-slider__slide swiper-slide">
+                        <div class="prices-content__wrapper">
+                            <div class="prices__item-wpapper">
+                                <p class="prices__text">
+                                    Once upon a time all the Rivers combined to protest against the action of the Sea in
+                                    making their waters salt. “When we come to you,” said they to the Sea.
+                                </p>
+                                <div class="prices-testimonal__wpapper">
+                                    <span class="prices-testimonal__icon"></span>
+                                    <div class="prices-testimonal-text__wrapper">
+                                        <span class="prices__testimonal-text">John Doe</span>
+                                        <span class="prices__testimonal-text">CEO, THE RIVERS COMPANY</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="prices__item-wpapper">
+                                <p class="prices__text">A shoe is not only a design, but it's a part of your body
+                                    language, the way you walk.
+                                    The way you're going to move is quite dictated by your shoes.
+                                </p>
+                                <div class="prices-testimonal__wpapper">
+                                    <span class="prices-testimonal__icon"></span>
+                                    <div class="prices-testimonal-text__wrapper">
+                                        <span class="prices__testimonal-text">Dean Winchester</span>
+                                        <span class="prices__testimonal-text">UX DESIGNER, GOOGLE INC.</span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-             </div>
 
-             <div class=" prices-slider__slide swiper-slide">
-                <div class="prices-content__wrapper">
-                    <div class="prices__item-wpapper">
-                        <p class="prices__text">
-                            Once upon a time all the Rivers combined to protest against the action of the Sea in
-                             making their waters salt. “When we come to you,” said they to the Sea.
-                        </p>
-                        <div class="prices-testimonal__wpapper">
-                            <span class="prices-testimonal__icon"></span>
-                            <div class="prices-testimonal-text__wrapper">
-                                <span class="prices__testimonal-text">John Doe</span>
-                                <span class="prices__testimonal-text">CEO, THE RIVERS COMPANY</span>
+                    <div class=" prices-slider__slide swiper-slide">
+                        <div class="prices-content__wrapper">
+                            <div class="prices__item-wpapper">
+                                <p class="prices__text">
+                                    Once upon a time all the Rivers combined to protest against the action of the Sea in
+                                    making their waters salt. “When we come to you,” said they to the Sea.
+                                </p>
+                                <div class="prices-testimonal__wpapper">
+                                    <span class="prices-testimonal__icon"></span>
+                                    <div class="prices-testimonal-text__wrapper">
+                                        <span class="prices__testimonal-text">John Doe</span>
+                                        <span class="prices__testimonal-text">CEO, THE RIVERS COMPANY</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="prices__item-wpapper">
+                                <p class="prices__text">A shoe is not only a design, but it's a part of your body
+                                    language,
+                                    the way you walk. The way you're going to move is quite dictated by your shoes.
+                                </p>
+                                <div class="prices-testimonal__wpapper">
+                                    <span class="prices-testimonal__icon"></span>
+                                    <div class="prices-testimonal-text__wrapper">
+                                        <span class="prices__testimonal-text">Dean Winchester</span>
+                                        <span class="prices__testimonal-text">UX DESIGNER, GOOGLE INC.</span>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="prices__item-wpapper">
-                        <p class="prices__text">Once upon a time all the Rivers combined to protest against the action of 
-                            the Sea in making their waters salt. “When we come to you,” said they to the Sea.
-                        </p>
-                        <div class="prices-testimonal__wpapper">
-                            <span class="prices-testimonal__icon"></span>
-                            <div class="prices-testimonal-text__wrapper">
-                                <span class="prices__testimonal-text">Dean Winchester</span>
-                                <span class="prices__testimonal-text">UX DESIGNER, GOOGLE INC.</span>
-                            </div>
-                        </div>
-                    </div>
+
+
                 </div>
-         </div>
-
-           
-                </div> 
                 <div class="swiper-pagination"></div>
             </div>
 
