--- a/src/tpl/partials/prices.html
+++ b/src/tpl/partials/prices.html
@@ -140,4 +140,20 @@
 
         </div>
     </div>
+
+
+
+
+</section>
+
+
+<section class="prices__bottom-content">
+    <div class="container prices__bottom-container">
+        <h2 class="prices__bottom-title">Like what you see? <span>Get this great theme now!</span> </h2>
+        <div class="prices__btn-container ">
+            <button class="button-secondary button">VIEW FEATURES</button>
+            <button class="button-primary button">DOWNLOAD NOW</button>
+        </div>
+    </div>
+
 </section>
